# quneiform

./: .bzrignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  INSTALL  NEWS  Quneiform.entitlements  README  TODO  install_files.cmake  issues.txt  original russian readme.rtf  readme.old.txt  readme.txt
api/swig/: CMakeLists.txt  cuneiform.i
cli/: CMakeLists.txt  cf-binarize.cpp  cf-layout.cpp  clioptions.cpp  clioptions.h  cuneiform-cli.cpp  cuneiform_process_cli.cpp  getopt.c  getopt.h  getopt1.c  getopt_int.h  ltmain.cpp  options.cpp  options.h  optionsparser.cpp  optionsparser.h
contrib/libksane/: AUTHORS  CMakeLists.txt  COPYING.twain  FindSane.cmake  README
cuneiform_src/: CMakeLists.txt  original russion build document.rtf
cuneiform_src/Addfiles/: license.txt  reg.bat
cuneiform_src/Kern/: CMakeLists.txt  config.h.in  cuneiform-cli.cpp  license.txt  pumatest.cpp  rpstrtest.c  windummy.c
cuneiform_src/cli/: CMakeLists.txt  cuneiform-cli.cpp
gui/: CMakeLists.txt  Messages.sh  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  applicationhelpfactory.cpp  applicationhelpfactory.h  aspellchecker.cpp  aspellchecker.h  binarizationsettings.cpp  binarizationsettings.h  block.cpp  block.h  blocktype.h  cedpageexporter.cpp  cedpageexporter.h  cedserializer.cpp  cfexporter.cpp  cfutils.cpp  cfutils.h  colorbutton.cpp  document.cpp  document.h  exportdialog.cpp  exporterfactory.h  exportsettings.cpp  exportsettings.h  formatsettings.cpp  formatsettings.h  formatsettingsdialog.cpp  formatsettingsdialog.h  formatsettingsdialog.ui  fullscreen.cpp  fullscreen.h  globalstate.cpp  globalstate.h  graphicsitemlayout.cpp  graphicsitemlayout.h  guilog.cpp  guilog.h  (+112 more)
gui/dialogs/: aboutdialog.cpp  aboutdialog.ui  abstractpreferencesdialog.cpp  abstractpreferencesdialog.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  formatsettingsdialog.cpp  formatsettingsdialog.h  listpreferencesdialog.cpp  listpreferencesdialog.h  logviewerdialog.cpp  logviewerdialog.h  logviewerdialog.ui  macpreferencesdialog.cpp  macpreferencesdialog.h  openprogressdialog.cpp  openprogressdialog.h  packetopenprogressdialog.cpp  packetopenprogressdialog.h  pagepropertiesdialog.cpp  pagepropertiesdialog.ui  preferencesdialogfactory.cpp  preferencesdialogfactory.h  recognitionprogressdialog.cpp  recognitionprogressdialog.h  recognitionsettingsdialog.cpp  recognitionsettingsdialog.h  recognitionsettingsdialog.ui  settings.cpp  settings.h  settings.ui  tabpreferencesdialog.cpp  tabpreferencesdialog.h
gui/export/: cedpageexporter.cpp  cedpageexporter.h  cedserializer.cpp  cedserializer.h  cfexporter.cpp  cfexporter.h  exporterfactory.cpp  nativeexporter.cpp  qtextdocumentexporter.cpp  qtextdocumentexporter.h  rectexporter.cpp  rectexporter.h
gui/internal/: cimagestorage.cpp  cimagestorage.h  cimageview.cpp  cimageview.h
gui/macosx/: CMakeLists.txt  imagecapture.cpp  imagecapture.h  macapplicationhelp.cpp  macapplicationhelp.h  macbundle.cpp  macbundle.h  maccftype.h  macdocktile.h  macdocktile.mm  macfullscreen.h  macfullscreen.mm  machelp.h  machelp.mm  maclocale.h  maclocale.mm  macopenfile.h  macopenfile.mm  macosx_resources.qrc  macpool.h  macpool.mm  macstring.h  macstring.mm  mactoolbar.h  mactoolbar.mm  mactoolbardelegate.h  mactoolbardelegate.mm
gui/plugins/: CMakeLists.txt  dibimageiohandler.cpp  dibimageiohandler.h  dibimageioplugin.cpp  multitiffioplugin.cpp  pdfiohandler.cpp  pdfiohandler.h  pdfioplugin.cpp
gui/resources/: CMakeLists.txt  ImageCapturePlugin.wflow  Info.plist.in  cuneiform.icns  cuneiform.qrc  cursor_selection_area.xpm  cursor_selection_area_add.xpm  cursor_selection_area_subtract.xpm  cursor_selection_image_add.xpm  cursor_selection_text_add.xpm  disk_logo.icns  disk_logo.xcf  linuxstyle.css  macosx_resources.qrc  macstyle.css  quneiform.desktop  quneiform.xml  ru.locversion.plist  win_quneiform.rc
gui/scan/: CMakeLists.txt  abstractscannerdialog.cpp  abstractscannerdialog.h  dummyscannerdialog.cpp  dummyscannerdialog.h  externalappscannerdialog.cpp  externalappscannerdialog.h  kscandialog.cpp  kscandialog.h  macscannerdialog.cpp  macscannerdialog.h  sanedialog.cpp  sanedialog.h  sanescannerdialog.cpp  sanescannerdialog.h  scanarea.cpp  scanarea.h  scandialogtypes.h  scanner.cpp  scanner.h  scannerdialog.cpp  scannerdialog.h  scannerdialog.ui  scanneroption.cpp  scanneroption.h  scanneroptionrange.cpp  scanneroptionrange.h  twainscannerdialog.cpp  twainscannerdialog.h
gui/spell/: CMakeLists.txt  aspellchecker.cpp  aspellchecker.h  dummyspellchecker.cpp  dummyspellchecker.h  ispellchecker.cpp  ispellchecker.h  macspellchecker.cpp  macspellchecker.h  macspellchecker_private.mm  range.cpp  spellcheckerfactory.cpp  spellcheckerfactory.h  spellcheckhighlighter.cpp  spellcheckhighlighter.h
gui/translations/: ru.ts  ua.ts
gui/widgets/: colorbutton.cpp  colorbutton.h  debugpreferences.cpp  debugpreferences.h  editorpreferences.cpp  editorpreferences.h  fileselectwidget.cpp  fileselectwidget.h  fontbutton.cpp  fontbutton.h  generalpreferences.cpp  generalpreferences.h  graphicsroundedrectitem.cpp  graphicsroundedrectitem.h  histogramwidget.cpp  histogramwidget.h  imageview.cpp  imageview.h  imagewidget.cpp  imagewidget.h  languagemenu.cpp  languageselect.cpp  languageselect.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pageindicator.cpp  pageindicator.h  preferenceswidget.h  (+17 more)
src/: CMakeLists.txt  blockelement.cpp  blockelement.h  cifocr.cpp  cifocr.h  cifstring.cpp  cifstring.h  cuneiform.h  document.cpp  document.h  element.h  exporter.h  htmlexporter.cpp  htmlexporter.h  image.cpp  image.h  iterator.h  module.h  ocrengine.cpp  ocrengine.h  page.cpp  page.h  paragraph.cpp  paragraph.h  puma.cpp  puma.h  table.cpp  table.h  textexporter.cpp  textexporter.h  types.h
tests/: CMakeLists.txt  assert_recognize.h  lang_regression.py  quick_format_test.py  quick_lang_test.py  quick_test.py  test_align.py  test_common.h
utils/: CMakeLists.txt  binary_diff.py  cuneiform_md5.py  find_duplicated_files.sh  find_non_ascii_chars.py  replace.py  vimrc
(+4105 files in other folders)
